--- a/.github/workflows/dockerhub-dev.yml
+++ b/.github/workflows/dockerhub-dev.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
     branches: [ master ]
 
+permissions:
+  contents: read
+  pull-requests: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
