migrate existing keras models to kagglehub

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,10 @@ misc/tmp
 wheels*
 /training.log
 Pipfile.lock
+models/training/.complete
+models/training/config
+models/training/model
+models/training/weights
 
 # Unit test / coverage reports
 htmlcov/
